--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nodemon": "^1.12.7"
   },
   "scripts": {
-    "start": "babel-node index.js --presets es2015,stage-2"
+    "start": "nodemon index.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
